--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,11 +8,8 @@
                 "name": "Chrome",
                 "type": "chrome",
                 "request": "launch",
-                "url": "http://localhost:8080",
-                "webRoot": "${workspaceRoot}/app",
-                "sourceMapPathOverrides": {
-                    "webpack:///app/*": "${webRoot}/*"
-                },
+                "url": "http://localhost:8080/",
+                "webRoot": "${workspaceRoot}",
                 "sourceMaps": true
         }
     ]
