--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=dev webpack-dev-server --hot --open",
+    "start": "NODE_ENV=dev webpack-dev-server --hot",
     "debug": "webpack-dev-server --hot --open $NODE_DEBUG_OPTION",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,6 +26,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.9",
     "eslint-loader": "^1.9.0",
+    "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
     "koa": "^2.4.1",
     "less": "^2.7.3",
@@ -47,6 +48,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "url-loader": "^0.6.2",
     "whatwg-fetch": "^2.0.3"
   }
 }
