--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=dev webpack-dev-server --hot",
+    "mock": "node --harmony ./mock/server.js",
     "debug": "webpack-dev-server --hot --open $NODE_DEBUG_OPTION",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,14 +27,17 @@
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.9",
     "eslint-loader": "^1.9.0",
-    "file-loader": "^1.1.6",
+    "file-loader": "^1.1.9",
     "html-webpack-plugin": "^2.30.1",
     "koa": "^2.4.1",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "open-browser-webpack-plugin": "0.0.5",
     "postcss-loader": "^2.1.0",
+    "react": "^16.2.0",
+    "react-swipe": "^5.1.1",
     "style-loader": "^0.20.1",
+    "swipe-js-iso": "^2.0.4",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
   },
@@ -44,7 +48,6 @@
     "koa-body": "^2.5.0",
     "koa-router": "^7.4.0",
     "prop-types": "^15.6.0",
-    "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
