--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "html-webpack-plugin": "^2.30.1",
     "koa": "^2.4.1",
     "less": "^2.7.3",
-    "less-loader": "^4.0.5",
+    "less-loader": "^4.0.6",
     "open-browser-webpack-plugin": "0.0.5",
     "postcss-loader": "^2.1.0",
     "react": "^16.2.0",
@@ -42,6 +42,8 @@
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
+    "antd": "^3.2.2",
+    "babel-eslint": "^8.2.2",
     "es6-promise": "^4.2.4",
     "eslint": "^4.17.0",
     "eslint-plugin-react": "^7.6.1",
