--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,15 @@
 sudo: false
 language: node_js
 node_js:
-  - "6"
+  - "9"
 
 cache:
   directories:
     - node_modules
 
 install:
-  - npm install -g yarn
-  - yarn install
-
+  - npm install
+  
 script:
   - npm start
-  - npm run deploy:prod
 
-after_success:
-  - npm run codecov
