--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "NODE_ENV=dev webpack-dev-server --hot",
     "mock": "node --harmony ./mock/server.js",
     "debug": "webpack-dev-server --hot --open $NODE_DEBUG_OPTION",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rm -rf ./build && NODE_ENV=production webpack -p --progress --config webpack.production.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +28,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.9",
     "eslint-loader": "^1.9.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.9",
     "html-webpack-plugin": "^2.30.1",
     "koa": "^2.4.1",
