[添加了搜索结果页和详情页的细化，以及解决了搜索功能]

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=dev webpack-dev-server --hot",
+    "start": "NODE_ENV=dev webpack-dev-server --hot  --history-api-fallback",
+
     "mock": "node --harmony ./mock/server.js",
     "debug": "webpack-dev-server --hot --open $NODE_DEBUG_OPTION",
     "test": "echo \"Error: no test specified\" && exit 1",
