--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=dev webpack-dev-server --hot  --history-api-fallback",
-
     "mock": "node --harmony ./mock/server.js",
     "debug": "webpack-dev-server --hot --open $NODE_DEBUG_OPTION",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -51,6 +50,7 @@
     "eslint": "^4.17.0",
     "eslint-plugin-react": "^7.6.1",
     "koa-body": "^2.5.0",
+    "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.4.0",
     "prop-types": "^15.6.0",
     "react-dom": "^16.2.0",
